; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/format/mz/extr_mz.c_r_bin_mz_la_to_pa.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/format/mz/extr_mz.c_r_bin_mz_la_to_pa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.r_bin_mz_obj_t = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.r_bin_mz_obj_t*, i64)* @r_bin_mz_la_to_pa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @r_bin_mz_la_to_pa(%struct.r_bin_mz_obj_t* %0, i64 %1) #0 {
  %3 = alloca %struct.r_bin_mz_obj_t*, align 8
  %4 = alloca i64, align 8
  store %struct.r_bin_mz_obj_t* %0, %struct.r_bin_mz_obj_t** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = load %struct.r_bin_mz_obj_t*, %struct.r_bin_mz_obj_t** %3, align 8
  %7 = getelementptr inbounds %struct.r_bin_mz_obj_t, %struct.r_bin_mz_obj_t* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = shl i32 %10, 4
  %12 = sext i32 %11 to i64
  %13 = add nsw i64 %5, %12
  ret i64 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
